--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,23 +1,31 @@
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+# .readthedocs.yaml
 
-# Required
+# The version of the configuration schema to use.
 version: 2
 
-# Set the OS, Python version, and other tools you might need
-build:
-  os: ubuntu-24.04
-  tools:
-    python: "3.13"
+# The main language for the documentation
+language: en
 
-# Build documentation in the "docs/" directory with Sphinx
+# Sphinx configurations
 sphinx:
-   configuration: docs/conf.py
+  configuration: docs/conf.py
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
-        
+# Build options
+build:
+  image: latest  # Specifies the version of the image to use for building
+  os: ubuntu-20.04  # Specifies the OS for the build
+
+# Python-related configuration (if applicable)
+python:
+  version: 3.8  # Python version to use
+  install:
+    - requirements: docs/requirements.txt  # Location of your requirements file
+  keep_virtualenv: true  # Whether to keep the virtual environment
+
+# Additional settings
+formats:
+  - html  # The output format for the documentation, e.g., html, pdf, etc.
+
+# Customize the behavior of the build process
+extra_requirements:  # Optional, for specifying additional dependencies
+  - sphinx_rtd_theme
