--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,22 @@
+# .readthedocs.yaml
 version: 2
 
+# Sphinx configuration
 sphinx:
   configuration: docs/conf.py
 
+# Only build PDF
 formats:
   - pdf
 
+# Python environment setup
 python:
   version: "3.12"
   install:
     - requirements: docs/requirements.txt
 
+# Build configuration
 build:
   os: ubuntu-22.04
+  tools:
+    python: "3.12"
