--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,3 +1,4 @@
+# .readthedocs.yaml
 version: 2
 
 # Sphinx configuration
@@ -7,7 +8,7 @@ sphinx:
 # Build formats
 formats:
   - pdf
-  - htmlzip   # HTML must be built, even if you don’t want it
+  - htmlzip  # HTML must exist for RTD, even if you only care about PDF
 
 # Build configuration
 build:
@@ -17,10 +18,10 @@ build:
   commands:
     # Upgrade pip and setuptools
     - python -m pip install --upgrade pip setuptools
-    # Install requirements
+    # Install your project requirements
     - pip install -r docs/requirements.txt
-    # Build HTML (needed for RTD)
+    # Build HTML (required by RTD)
     - sphinx-build -b html docs/ $READTHEDOCS_OUTPUT/html
-    # Build PDF
+    # Build PDF via LaTeX
     - sphinx-build -b latex docs/ _build/latex
     - latexmk -r _build/latex/latexmkrc -pdf -f -dvi- -ps- -jobname=auraos -interaction=nonstopmode -outdir=$READTHEDOCS_OUTPUT/pdf _build/latex/*.tex
