--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,27 +1,21 @@
-# .readthedocs.yaml
 version: 2
 
-# Sphinx configuration
 sphinx:
   configuration: docs/conf.py
 
-# Build formats
 formats:
   - pdf
-  - htmlzip  # HTML must exist for RTD, even if you only care about PDF
+  - htmlzip   # RTD requires HTML output
 
-# Build configuration
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
   commands:
-    # Upgrade pip and setuptools
+    # Upgrade pip/setuptools and install requirements
     - python -m pip install --upgrade pip setuptools
-    # Install your project requirements
     - pip install -r docs/requirements.txt
     # Build HTML (required by RTD)
     - sphinx-build -b html docs/ $READTHEDOCS_OUTPUT/html
-    # Build PDF via LaTeX
-    - sphinx-build -b latex docs/ _build/latex
-    - latexmk -r _build/latex/latexmkrc -pdf -f -dvi- -ps- -jobname=auraos -interaction=nonstopmode -outdir=$READTHEDOCS_OUTPUT/pdf _build/latex/*.tex
+    # Build PDF using Rinoh (no LaTeX needed)
+    - sphinx-build -b rinoh docs/ $READTHEDOCS_OUTPUT/pdf
