--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,20 +5,9 @@ sphinx:
 
 formats:
   - pdf
-  - htmlzip
+  - htmlzip   # keeps RTD happy
 
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  commands:
-    # Upgrade pip/setuptools
-    - python -m pip install --upgrade pip setuptools
-    # Install your Python requirements
-    - pip install -r docs/requirements.txt
-    # Build HTML (required by RTD)
-    - sphinx-build -b html docs/ $READTHEDOCS_OUTPUT/html
-    # Build LaTeX
-    - sphinx-build -b latex docs/ _build/latex
-    # Compile PDF from LaTeX
-    - latexmk -pdf -interaction=nonstopmode -output-directory=$READTHEDOCS_OUTPUT/pdf _build/latex/*.tex
