--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,13 @@
 version: 2
 
-
 build:
-os: ubuntu-22.04
-tools:
-python: 3.12
-sphinx:
-configuration: docs/conf.py
-python:
-install:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
 
-requirements: docs/requirements.txt
+sphinx:
+  configuration: docs/conf.py
+
+python:
+  install:
+    - requirements: docs/requirements.txt
