Enable PDF and EPUB output on ReadTheDocs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,11 @@ build:
 sphinx:
   configuration: docs/conf.py
 
+formats:
+  - html
+  - pdf
+  - epub
+
 python:
   install:
     - requirements: docs/requirements.txt
