--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,18 +1,12 @@
+# .readthedocs.yaml
 version: 2
 
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.11"
 
-sphinx:
-  configuration: docs/conf.py
-
-formats:
-  - html
-  - pdf
-  - epub
-
-python:
-  install:
-    - requirements: docs/requirements.txt
+# Build documentation with MkDocs
+mkdocs:
+  configuration: mkdocs.yml
+  fail_on_warning: false
