--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,13 +4,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  jobs:
-    post_build:
-      - "mv _build/html $READTHEDOCS_OUTPUT/html"
 
-mkdocs:
-  configuration: mkdocs.yml
-  fail_on_warning: true
+sphinx:
+  configuration: docs/conf.py
+
+formats:
+  - html
+  - pdf
+  - epub
 
 python:
   install:
