--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
-site_name: AuraOS
 nav:
-  - 'AIPROMPT': 'AIPROMPT.md'
-  - 'HISTORY': 'HISTORY.md'
-  - 'CriticalLOG': 'CriticalLOG.md'
+  - Home: index.md
+  - Overview: overview.md
+  - Anthony's Axiom: anthonys-axiom.md
+  - Memory Files:
+      - Downloads: downloads.md
