--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,17 +1,26 @@
+# Read the Docs configuration file for AuraOS
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html
+
 version: 2
 
+# Set the OS, Python version and other tools
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
 
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
+  builder: html
+  fail_on_warning: false
 
-formats:
-  - pdf
-  - epub
-
+# Install Python dependencies
 python:
   install:
     - requirements: docs/requirements.txt
+
+# Specify formats to build
+formats:
+  - pdf
+  - epub
