--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,26 +1,26 @@
-# Read the Docs configuration file for AuraOS
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html
-
+# .readthedocs.yaml
 version: 2
 
-# Set the OS, Python version and other tools
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
 
-# Build documentation in the "docs/" directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
-  builder: html
-  fail_on_warning: false
+  jobs:
+    pre_install:
+      - pip install --upgrade pip setuptools wheel
+      - pip install sphinx==8.2.3 sphinx_rtd_theme>=2.0.0 wheel
+    post_build:
+      - echo "AuraOS build completed successfully."
 
-# Install Python dependencies
 python:
   install:
     - requirements: docs/requirements.txt
 
-# Specify formats to build
+sphinx:
+  configuration: docs/conf.py
+  builder: html
+  fail_on_warning: true
+
 formats:
-  - pdf
-  - epub
+  - html
