--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,3 @@
-mkdocs>=1.5
-mkdocs-material>=9.0
-sphinx_rtd_theme>=2.0.0sphinx_rtd_theme>=2.0.0
+sphinx==8.2.3
+sphinx_rtd_theme>=2.0.0
+myst-parser>=0.19.0
